[project]
name = "xenobladex-calculator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "icecream>=2.1.4",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "nxpydot>=0.1",
    "pandas>=2.2.3",
    "pydantic>=2.11.2",
    "snakeviz>=2.2.2",
]
